--- a/MiniShopApp/Pages/Settings/AboutIndex.razor
+++ b/MiniShopApp/Pages/Settings/AboutIndex.razor
@@ -2,7 +2,7 @@
 @rendermode InteractiveServer
 @layout MainLayout2
 <PageTitle>About</PageTitle>
-<div>
+<div class="container-fluid mt-3">
     <h4 class="mb-3">About our app</h4>
     <p class="mb-2">We are developing a web application integrated with the Telegram Mini App platform, 
         designed to streamline online ordering for restaurants and food vendors. 
