--- a/MiniShopApp/_Imports.razor
+++ b/MiniShopApp/_Imports.razor
@@ -13,6 +13,8 @@
 @using MiniShopApp.Shared
 @using MudBlazor
 @using MudBlazor.Services
+
+@inject ISnackbar SnackbarService
 @inject IDialogService DialogService
 @inject NavigationManager NavigationManager
 
