--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @attribute [StreamRendering(false)]
 @* Required *@
-<MudThemeProvider />
+<MudThemeProvider @ref="_mudThemeProvider" @bind-IsDarkMode="_isDarkMode" Theme="_theme"/>
 <MudPopoverProvider />
 @* Needed for dialogs *@
 <MudDialogProvider />
@@ -11,10 +11,12 @@
 
 
 <MudLayout>
-    <MudAppBar>
+    <MudAppBar Elevation="1" Dense="false">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         Mini Order App
         <MudSpacer />
+        <MudSwitch @bind-Value="_isDarkMode" Color="Color.Primary" Class="ma-4" T="bool" Label="Light/Dark" />
+
         <MudMenu>
             <ActivatorContent>
                 <MudAvatar>
@@ -28,13 +30,12 @@
             </ChildContent>
         </MudMenu>
     </MudAppBar>
-    <MudDrawer @bind-Open="@_drawerOpen" >
-        
-        <MudPaper Width="250px" Class="d-inline-flex py-3" Elevation="0">
+    <MudDrawer @bind-Open="@_drawerOpen" ClipMode="DrawerClipMode.Docked" Elevation="1" Variant="@DrawerVariant.Responsive">
+        <MudDrawerHeader>
+            <MudText Typo="Typo.h6" Class="px-4">Mini App</MudText>
+            
+        </MudDrawerHeader>
             <MudNavMenu Class="mud-width-full">
-                <MudText Typo="Typo.h6" Class="px-4">Mini App</MudText>
-                <MudText Typo="Typo.body2" Class="px-4 mud-text-secondary">Mini Order App</MudText>
-                <MudDivider Class="my-2" />
                 <MudNavLink Href="/" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
                 <MudNavGroup Title="Orders" Icon="@Icons.Material.Filled.Lan">
                     <MudNavLink Href="/orders/views" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">Orders</MudNavLink>
@@ -62,9 +63,8 @@
                 
 
             </MudNavMenu>
-        </MudPaper>
     </MudDrawer>
-    <MudMainContent Class="container-fluid mt-3">
+    <MudMainContent Class="container-fluid">
         @Body
     </MudMainContent>
 </MudLayout>
@@ -75,6 +75,25 @@
     void DrawerToggle()
     {
         _drawerOpen = !_drawerOpen;
+    }
+    private bool _isDarkMode;
+    private MudThemeProvider? _mudThemeProvider;
+    private MudBlazor.MudTheme _theme = new MudBlazor.MudTheme(); // Initialize the required theme
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            _theme.PaletteDark = new MudBlazor.PaletteDark() // Use the correct derived class
+            {
+                Primary = "#673ab7", // Example primary color for dark mode
+                Secondary = "#ff4081", // Example secondary color for dark mode
+                Background = "#121212", // Example background color for dark mode
+                TextPrimary = "#ffffff", // Example text color for dark mode
+            };
+            _isDarkMode = await _mudThemeProvider!.GetSystemDarkModeAsync();
+            StateHasChanged();
+        }
     }
 }
 
