--- a/MiniShopApp/Pages/Home.razor
+++ b/MiniShopApp/Pages/Home.razor
@@ -10,6 +10,29 @@
     <h1 class="mb-4">Welcome to Mini Order!</h1>
     <p>This is a simple Blazor application to demonstrate basic features.</p>
     <p>Use the navigation menu to explore the app.</p>
+    <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="TestAlert" Class="mt-3">
+        Check Order
+    </MudButton>
+    <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="OnConfirm" Class="mt-3">
+        confirm
+    </MudButton>
 
 </div>
 
+@code{
+    async Task OnConfirm(){
+        var result = await DialogService.ShowMessageBox("Confirmation", "Are you sure you want to proceed?", "Yes", "No");
+        if (result == true)
+        {
+            SnackbarService.Add("You confirmed the action!", Severity.Success);
+        }
+        else
+        {
+            SnackbarService.Add("You canceled the action!", Severity.Warning);
+        }
+    }
+    private void TestAlert()
+    {
+        SnackbarService.Add("This is a test alert!", Severity.Info);
+    }
+}
