--- a/MiniShopApp/Pages/Index.razor
+++ b/MiniShopApp/Pages/Index.razor
@@ -14,8 +14,8 @@
             <h1 class="mb-4">Welcome to Mini Order! </h1>
             <p>This is a simple application to demonstrate basic features.</p>
             <p>Use the navigation menu to explore the app.</p>
-            <p class="mt-3">Check out the</p> 
-            <NavLink class="btn btn-outline-secondary" href="/orders">Check Order</NavLink> 
+            <p class="mt-3">Check out the</p>
+            <NavLink class="btn btn-secondary mb-2" href="/order/ordering">Check Order</NavLink>
             <p>page to view order.</p>
         </div>
     }
@@ -35,4 +35,10 @@
     }
 
 </div>
+@if (isLoading == true)
+{
+    <div class="text-center">
+        <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    </div>
+}
 
