--- a/MiniShopApp/Pages/Orders/OrderCreatePage.razor
+++ b/MiniShopApp/Pages/Orders/OrderCreatePage.razor
@@ -86,7 +86,7 @@
                     "Yes", "No");
         if (result == true)
         {
-            NavigationManager.NavigateTo("/orders",true);
+            NavigationManager.NavigateTo("/order/ordering",true);
         }
         
         
