--- a/MiniShopApp/Pages/Orders/OrderHistory/HistoryIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderHistory/HistoryIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/order/histories"
+﻿@page "/order/histories/{userId:long?}"
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @layout MainLayout2
 @rendermode InteractiveServer
