--- a/MiniShopApp/Pages/Settings/AboutIndex.razor
+++ b/MiniShopApp/Pages/Settings/AboutIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/order/about"
+﻿@page "/order/about/{userId:long?}"
 @rendermode InteractiveServer
 @layout MainLayout2
 <PageTitle>About</PageTitle>
