--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/order/ordering"
+﻿@page "/order/ordering/{userId:long?}"
 @layout MainLayout2
 @rendermode InteractiveServer
 
@@ -44,9 +44,10 @@
                         <h5 class="card-text text-danger">@String.Format("${0:N2}", list?.Price)</h5>
                     </div>
                     <div class="d-flex justify-content-between mx-2 my-2">
-                        <button class="btn btn-sm btn-primary btn-sm" @onclick="@(() => DescreasProduct(list!.Id))">-</button>
 
-                        <button class="btn btn-sm btn-primary btn-sm" @onclick="@(() => AddProduct(list!.Id))">+</button>
+                    <MudIconButton Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="@(() => DescreasProduct(list!.Id))" Color="Color.Info" Size="Size.Medium" />
+                    <MudIconButton Icon="@Icons.Material.Outlined.AddCircleOutline" OnClick="@(() => AddProduct(list!.Id))" Color="Color.Primary" Size="Size.Medium" />
+                       
                     </div>
                 </div>
 
