--- a/MiniShopApp/Pages/Index.razor
+++ b/MiniShopApp/Pages/Index.razor
@@ -15,7 +15,7 @@
             <p>This is a simple application to demonstrate basic features.</p>
             <p>Use the navigation menu to explore the app.</p>
             <p class="mt-3">Check out the</p>
-            <NavLink class="btn btn-secondary mb-2" href="/order/ordering">Check Order</NavLink>
+            <NavLink class="btn btn-secondary mb-2" href="@($"/order/ordering/{userId}")">Check Order</NavLink>
             <p>page to view order.</p>
         </div>
     }
