--- a/MiniShopApp/Shared/DialogOrderDetails.razor
+++ b/MiniShopApp/Shared/DialogOrderDetails.razor
@@ -41,7 +41,7 @@
         </table>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton OnClick="Cancel">Close</MudButton>
     </DialogActions>
 </MudDialog>
 
