--- a/MiniShopApp/_Imports.razor
+++ b/MiniShopApp/_Imports.razor
@@ -10,6 +10,7 @@
 @using MiniShopApp.Components
 @using MiniShopApp.Data
 @using MiniShopApp.Components.Layout
+@using MiniShopApp.Data.TelegramStore
 @using MiniShopApp.Shared
 @using MudBlazor
 @using MudBlazor.Services
@@ -17,4 +18,5 @@
 @inject ISnackbar SnackbarService
 @inject IDialogService DialogService
 @inject NavigationManager NavigationManager
+@inject UserState userState
 
