--- a/MiniShopApp/Pages/Settings/UserManages/UserCustomerLogIndex.razor
+++ b/MiniShopApp/Pages/Settings/UserManages/UserCustomerLogIndex.razor
@@ -1,72 +1,98 @@
 ﻿@page "/settings/user/customer-log"
+@using MiniShopApp.Models
 @layout MainLayout
 <PageTitle>Customer Logs</PageTitle>
-@if (IsLoading == true)
-{
-    <div class="text-center">
-        <div class="spinner-border" role="status">
-            <span class="visually-hidden">Loading...</span>
+
+<MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
+    <MudTabPanel Text="Customer logs" Icon="@Icons.Material.Filled.Api">
+        @if (IsLoading == true)
+        {
+            <div class="text-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        }
+        <div class="row">
+            <div class="col-md-12">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Search logs..." />
+                    <button class="btn btn-outline-secondary">Search</button>
+                </div>
+                <table class="table table-hover table-striped-columns caption-top">
+                    <caption>Customer Logs</caption>
+                    <thead>
+                        <tr>
+                            <th>Customer ID</th>
+                            <th>Fullname</th>
+                            <th>Username</th>
+                            <th>Phone</th>
+                            <th>Login-Date</th>
+                            <th>Last-Login</th>
+                            <th>Details</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @foreach (var log in userCustomers ?? default!)
+                        {
+                            <tr>
+                                <td>@log.CustomerId</td>
+                                <td>@log.FirstName @log.LastName</td>
+                                <td>@log.UserName</td>
+                                <td>@log.phoneNumber</td>
+                                <td>@log.loginDateTime</td>
+                                <td>@log.LastLoginDT</td>
+                                <td>
+                                </td>
+
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+
+            </div>
+           
         </div>
-    </div>
-}
-<div class="row">
-    <div class="col-md-12">
-        <div class="d-flex justify-content-start mb-2">
-            <h5 class="">Customers</h5>
-            <button 
-                
-                
-                @onclick="@(() => ReadUserLog())" 
-                 
-                class="mx-3 btn btn-info btn-sm"
-                >Read log</button>
-        </div>
+    </MudTabPanel>
+    <MudTabPanel Text="Read Log" Icon="@Icons.Material.Filled.Info" OnClick="@(() => ReadUserLog())">
         
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search logs..." />
-            <button class="btn btn-outline-secondary">Search</button>
-        </div>
-        <table class="table table-hover table-striped-columns caption-top">
-            <caption>Customer Logs</caption>
-            <thead>
-                <tr>
-                    <th>Customer ID</th>
-                    <th>Fullname</th>
-                    <th>Username</th>
-                    <th>Phone</th>
-                    <th>Login-Date</th>
-                    <th>Last-Login</th>
-                    <th>Details</th>
-                </tr>
-            </thead>
+        @if (UserLogContent is not null)
+        {
+            <pre style="max-height:400px;overflow:auto;">@UserLogContent</pre>
+        }
+        else
+        {
+            <p>No log loaded yet.</p>
+        }
+    </MudTabPanel>
+    <MudTabPanel Text="Customer Alert" Icon="@Icons.Material.Filled.Message">
+        <MudStack Justify="Justify.SpaceBetween">
+            @if (IsLoading == true)
+            {
+                <div class="text-center">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+            }
+            <div class="form-floating mt-3">
+                <textarea class="form-control" @bind="@messegeText" placeholder="Leave a message here..." id="floatingTextarea2" style="height: 100px"></textarea>
+                <label for="floatingTextarea2">Alert Text</label>
+            </div>
+            <MudButton Variant="Variant.Filled" 
+            StartIcon="@Icons.Material.Filled.TaxiAlert" 
+            Color="Color.Secondary"
+            OnClick="CreateAlert">Summit Alert All Users</MudButton>
+        </MudStack>
+    </MudTabPanel>
+    <MudTabPanel Text="Tab Disabled" Disabled="true">
+        <MudText>Content Disabled</MudText>
+    </MudTabPanel>
+</MudTabs>
 
-            <tbody>
-                @foreach (var log in userCustomers ?? default!)
-                {
-                    <tr>
-                        <td>@log.CustomerId</td>
-                        <td>@log.FirstName @log.LastName</td>
-                        <td>@log.UserName</td>
-                        <td>@log.phoneNumber</td>
-                        <td>@log.loginDateTime</td>
-                        <td>@log.LastLoginDT</td>
-                        <td>
-                            
-                        </td>
 
-                    </tr>
-                }
-            </tbody>
-        </table>
-
-    </div>
-    @if (UserLogContent is not null)
-    {
-        <pre style="max-height:400px;overflow:auto;">@UserLogContent</pre>
-    }
-    else
-    {
-        <p>No log loaded yet.</p>
-    }
-</div>
-
+@code{
+    string? messegeText = "";
+    List<CustomerAlertMessege> alertMessege = [];
+}
