--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -4,6 +4,14 @@
 
 <PageTitle>Products</PageTitle>
 @* <p>@customerId</p> *@
+@if (IsLoading == true)
+    {
+         <div class="text-center">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    }
     <div class="my-2">
 
 
@@ -17,12 +25,7 @@
             <button class="btn btn-outline-secondary" @onclick="OnGetSearchRefresh" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
         </div>
     </div>
-    @if (IsLoading == true)
-    {
-        <div class="text-center">
-            <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
-        </div>
-    }
+    
     <div class="row row-cols-3 row-cols-md-6 g-2 mb-5 pb-2">
         @foreach (var list in _products)
         {
