--- a/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
@@ -10,10 +10,10 @@
     <table class="table caption-top table-bordered table-hover table-responsive">
         <thead>
             <tr>
-                <th>No</th>
+                <th width="10%">No</th>
                 <th>Table number</th>
                 <th>Descriptions</th>
-                <th>Actions</th>
+                <th width="20%" class="text-end">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -23,8 +23,12 @@
                     <th>@_data.TableId</th>
                     <th>@_data.TableNumber</th>
                     <th>@_data.Description</th>
-                    <th>
-                        
+                    <th class="text-end">
+                        <MudIconButton Icon="@Icons.Material.Filled.Edit" aria-label="edit" Color="Color.Info" Size="Size.Small">
+                        </MudIconButton>
+                        <MudIconButton Icon="@Icons.Material.Filled.Delete" aria-label="remove" Color="Color.Error" Size="Size.Small">
+                        </MudIconButton>
+
                     </th>
                 </tr>
             }
