--- a/MiniShopApp/Pages/Index.razor
+++ b/MiniShopApp/Pages/Index.razor
@@ -33,8 +33,8 @@
             </div>
         </div>
     }
-   @*  <MudTextField @bind-Value="userId" Label="User ID" Variant="Variant.Outlined" Class="mb-2" />"
-    <MudButton OnClick="onCheckOrder">Check Order</MudButton> *@
+    <MudTextField @bind-Value="userId" Label="User ID" Variant="Variant.Outlined" Class="mb-2" />"
+    <MudButton OnClick="onCheckOrder">Check Order</MudButton>
 </div>
 @if (isLoading == true)
 {
