--- a/MiniShopApp/Pages/Index.razor
+++ b/MiniShopApp/Pages/Index.razor
@@ -15,7 +15,14 @@
             <p>This is a simple application to demonstrate basic features.</p>
             <p>Use the navigation menu to explore the app.</p>
             <p class="mt-3">Check out the</p>
-            <NavLink class="btn btn-secondary mb-2 w-100" href="@($"/order/ordering/{userId}")">Check Order</NavLink>
+            @* <NavLink class="btn btn-secondary mb-2 w-100" href="@($"/order/ordering/{userId}")">Check Order</NavLink> *@
+            <MudButton FullWidth=true 
+                Variant=Variant.Outlined 
+                Color="Color.Primary" 
+                StartIcon="@Icons.Material.Filled.Menu" 
+                Style="" 
+                Href="@($"/order/ordering/{userId}")">Check Order</MudButton>
+
             <p>page to view order.</p>
         </div>
     }
@@ -33,8 +40,8 @@
             </div>
         </div>
     }
-    <MudTextField @bind-Value="userId" Label="User ID" Variant="Variant.Outlined" Class="mb-2" />"
-    <MudButton OnClick="onCheckOrder">Check Order</MudButton>
+    @* <MudTextField @bind-Value="userId" Label="User ID" Variant="Variant.Outlined" Class="mb-2" />"
+    <MudButton OnClick="onCheckOrder" hr>Check Order</MudButton> *@
 </div>
 @if (isLoading == true)
 {
