--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -6,12 +6,14 @@
 @* <p>@customerId</p> *@
 @if (IsLoading == true)
     {
-         <div class="text-center">
+         <div class="text-center top-50 align-middle">
             <div class="spinner-border" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-        </div>
-    }
+    </div>
+}
+else
+{
     <div class="my-2">
 
 
@@ -25,7 +27,7 @@
             <button class="btn btn-outline-secondary" @onclick="OnGetSearchRefresh" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
         </div>
     </div>
-    
+
     <div class="row row-cols-3 row-cols-md-6 g-2 mb-5 pb-2">
         @foreach (var list in _products)
         {
@@ -48,19 +50,16 @@
                     </div>
                     <div class="d-flex justify-content-between mx-2 my-2">
 
-                    <MudIconButton Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="@(() => DescreasProduct(list!.Id))" Color="Color.Info" Size="Size.Medium" />
-                    <MudIconButton Icon="@Icons.Material.Outlined.AddCircleOutline" OnClick="@(() => AddProduct(list!.Id))" Color="Color.Primary" Size="Size.Medium" />
-                       
+                        <MudIconButton Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="@(() => DescreasProduct(list!.Id))" Color="Color.Info" Size="Size.Medium" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.AddCircleOutline" OnClick="@(() => AddProduct(list!.Id))" Color="Color.Primary" Size="Size.Medium" />
+
                     </div>
                 </div>
 
             </div>
         }
     </div>
-
-  
-
-
+}
 
 
 <div class="pt-5">
