--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -57,7 +57,7 @@
                 </MudNavGroup>
                 <MudNavGroup Title="Settings" Icon="@Icons.Material.Filled.Settings">
                     <MudNavLink Href="/settings/user/customer-log" Icon="@Icons.Material.Filled.LockPerson">Customer log</MudNavLink>
-                    <MudNavLink Href="/settings/user/telegram-config" Icon="@Icons.Material.Filled.LockPerson">Telegram</MudNavLink>
+                    <MudNavLink Href="/settings/user/telegram-config" Icon="@Icons.Custom.Brands.Telegram">Telegram</MudNavLink>
                     <MudNavLink Href="/" Icon="@Icons.Material.Filled.RoomService" IconColor="Color.Info">Service</MudNavLink>
                     <MudNavLink Href="/" Icon="@Icons.Material.Filled.Info" IconColor="Color.Info">About</MudNavLink>
                 </MudNavGroup>
